Perfil listo para mostrar categorias y productos, falta mostrar a detalle los productos, colocar el boton de carrito de compra, agregar la pantalla del carrito de comrpa y realizar la compra

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   indexed: ^0.0.8
   http: ^1.1.0
   fluttertoast: ^8.2.4
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
