--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,8 @@ dependencies:
   http: ^1.1.0
   fluttertoast: ^8.2.4
   shared_preferences: ^2.2.2
+  carousel_slider: ^4.2.1
+  flutter_slidable: ^3.0.1
 
 dev_dependencies:
   flutter_test:
